OPA/policy/seccompv2.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccompV2
metadata:
  name: psp-seccomp
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
      - nginx-exempt
    allowedProfiles:
      - RuntimeDefault
      - Localhost
    allowedLocalhostFiles:
      - "*"
